// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/analytics/statistic_count.tsx should match snapshot, loaded 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6"
>
  <div
    className="total-count"
  >
    <div
      className="title"
      data-testid="undefinedTitle"
    >
      Test
      <i
        className="fa test-icon"
      />
    </div>
    <div
      className="content"
    >
      4
    </div>
  </div>
</div>
`;

exports[`components/analytics/statistic_count.tsx should match snapshot, loaded with zero value 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6"
>
  <div
    className="total-count"
  >
    <div
      className="title"
      data-testid="undefinedTitle"
    >
      Test Zero
      <i
        className="fa test-icon"
      />
    </div>
    <div
      className="content"
    >
      0
    </div>
  </div>
</div>
`;

exports[`components/analytics/statistic_count.tsx should match snapshot, on loading 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6"
>
  <div
    className="total-count"
  >
    <div
      className="title"
      data-testid="undefinedTitle"
    >
      Test
      <i
        className="fa test-icon"
      />
    </div>
    <div
      className="content"
    >
      <FormattedMessage
        defaultMessage="Loading..."
        id="analytics.chart.loading"
      />
    </div>
  </div>
</div>
`;
